--- a/index.html
+++ b/index.html
@@ -1,111 +1,331 @@
-<!doctype html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<link rel="shortcut icon" href="assets/ico/favicon.png">
+		<title>Anto Subash - Software Developer, Web Developer, Based on Chennai</title>
+		<!-- Bootstrap core CSS -->
+		<link href="assets/css/bootstrap.css" rel="stylesheet">
+		<!-- Custom styles for this template -->
+		<link href="assets/css/main.css" rel="stylesheet">
+		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+		<script src="assets/js/jquery.min.js"></script>
+		<script type="text/javascript" src="assets/js/smoothscroll.js"></script>
+		<script src="assets/js/Chart.js"></script>
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+			<script src="assets/js/html5shiv.js"></script>
+			<script src="assets/js/respond.min.js"></script>
+		<![endif]-->
+	</head>
+	<body data-spy="scroll" data-offset="0" data-target="#nav">
+		<div id="section-topbar">
+			<div id="topbar-inner">
+				<div class="container">
+					<div class="row">
+						<div class="dropdown">
+							<ul id="nav" class="nav">
+								<li class="menu-item">
+									<a class="smoothScroll" href="#about" title="About"><i class="icon-user"></i></a>
+								</li>
+								<li class="menu-item">
+									<a class="smoothScroll" href="#resume" title="Resume"><i class="icon-file"></i></a>
+								</li>
+								<li class="menu-item">
+									<a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a>
+								</li>
+							</ul>
+							<!--/ uL#nav -->
+						</div>
+						<!-- /.dropdown -->
+						<div class="clear"></div>
+					</div>
+					<!--/.row -->
+				</div>
+				<!--/.container -->
+				<div class="clear"></div>
+			</div>
+			<!--/ #topbar-inner -->
+		</div>
+		<!--/ #section-topbar -->
+		<div id="headerwrap">
+			<div class="container">
+				<div class="row centered">
+					<div class="col-lg-12">
+						<h1>Anto Subash</h1>
+						<h3>Software Developer | antosubash@live.com</h3>
+					</div>
+					<!--/.col-lg-12 -->
+				</div>
+				<!--/.row -->
+			</div>
+			<!--/.container -->
+		</div>
+		<!--/.#headerwrap -->
+		<section id="about" name="about"></section>
+		<div id="intro">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2 col-lg-offset-1">
+						<h5>ABOUT</h5>
+					</div>
+					<div class="col-lg-6">
+						<p>I'm Software Developer with 3 years of professional experience. I'm interested in all kinds of web development, but my major
+							focus is on devoloping HTML5 based web application.</p>
+					</div>
+					<div class="col-lg-3">
+						<p>
+							<a href="AntoSubash Resume.docx"><i class="icon-file"></i></a>
+							<sm>DOWNLOAD DOC</sm>
+						</p>
+					</div>
+				</div>
+				<!--/.row -->
+			</div>
+			<!--/.container -->
+		</div>
+		<!--/ #intro -->
+		<section id="resume" name="resume"></section>
+		<!--EDUCATION DESCRIPTION -->
+		<div class="container desc">
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>EDUCATION</h5>
+				</div>
+				<div class="col-lg-6">
+					<p>
+						<t>Master of Computer Application</t>
+						<br/>Anna University
+						<br/>
+						<i>3 Years Course</i>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p>
+						<sm>JUNE 2012</sm>
+					</p>
+				</div>
+				<div class="col-lg-6 col-lg-offset-3">
+					<p>
+						<t>Bachelor of Computer Application</t>
+						<br/>Madaras University
+						<br/>
+						<i>3 Years Course</i>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p>
+						<sm>JUNE 2009</sm>
+					</p>
+				</div>
+			</div>
+			<!--/.row -->
+			<br>
+			<hr>
+		</div>
+		<!--/.container -->
+		<!--WORK DESCRIPTION -->
+		<div class="container desc">
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>WORK</h5>
+				</div>
+				<div class="col-lg-6">
+					<p>
+						<t>Software Developer</t>
+						<br/>Privatly Held Translation Company.
+						<br/>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p>
+						<sm>AUGUST 2012 - CURRENT</sm>
+					</p>
+				</div>
+			</div>
+			<!--/.row -->
+			<br>
+			<hr>
+		</div>
+		<!--/.container -->
+		<!--SKILLS DESCRIPTION -->
+		<div id="skillswrap">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2 col-lg-offset-1">
+						<h5>SKILLS</h5>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="javascript" height="130" width="130"></canvas>
+						<p>C# / Asp.Net / Asp.Net MVC</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 70,
+										color:"#1abc9c"
+									},
+									{
+										value : 30,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="bootstrap" height="130" width="130"></canvas>
+						<p>Web API</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 70,
+										color:"#1abc9c"
+									},
+									{
+										value : 10,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="wordpress" height="130" width="130"></canvas>
+						<p>Jquery</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 65,
+										color:"#1abc9c"
+									},
+									{
+										value : 35,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 col-lg-offset-3 centered">
+						<canvas id="html" height="130" width="130"></canvas>
+						<p>HTML/CSS</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 70,
+										color:"#1abc9c"
+									},
+									{
+										value : 20,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("html").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="photoshop" height="130" width="130"></canvas>
+						<p>Kendo UI</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 70,
+										color:"#1abc9c"
+									},
+									{
+										value : 30,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="illustrator" height="130" width="130"></canvas>
+						<p>Raven DB</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 50,
+										color:"#1abc9c"
+									},
+									{
+										value : 50,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("illustrator").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+				</div>
+				<!--/.row -->
+				<br>
+			</div>
+			<!--/.container -->
+		</div>
+		<!--/ #skillswrap -->
+		<section id="contact" name="contact"></section>
+		<!--FOOTER DESCRIPTION -->
+		<div id="footwrap">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2 col-lg-offset-1">
+						<h5>CONTACT</h5>
+					</div>
+					<div class="col-lg-6">
+						<p>
+							<t>Email</t>
+							<br/>antosubash@live.com
+							<br/>
+						</p>
+						<p>
+							<t>Phone</t>
+							<br/>+91 9789037451
+							<br/>
+						</p>
+					</div>
+					<div class="col-lg-3">
+						<p>
+							<sm>SOCIAL LINKS</sm>
+						</p>
+						<p>
+							<a href="http://www.twitter.com/antosubash"><i class="icon-twitter"></i></a>
+							<a href="http://www.facebook.com/antosubash"><i class="icon-facebook"></i></a>
+							<a href="http://www.linkedin.com/in/antosubash"><i class="icon-linkedin"></i></a>
+						</p>
+					</div>
+					<div class="col-lg-3">
+						<p>
+							<a href="http://stackoverflow.com/users/1068147/anto-j-subash">
+<img src="http://stackoverflow.com/users/flair/1068147.png?theme=dark" width="208" height="58" alt="profile for Anto J Subash at Stack Overflow, Q&A for professional and enthusiast programmers" title="profile for Anto J Subash at Stack Overflow, Q&A for professional and enthusiast programmers">
+</a>
+						</p>
+					</div>
+				</div>
+				<!--/.row -->
+			</div>
+			<!--/.container -->
+		</div>
+		<!--/ #footer -->
+		<div id="c">
+			<div class="container">
+				<p>Created by Anto Subash</p>
+			</div>
+		</div>
+		<!-- Bootstrap core JavaScript==================================================- ->
+    <!-- Placed at the end of the document so the pages load faster -->
+		<script src="assets/js/bootstrap.js"></script>
+	</body>
 
-	<title></title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-	<meta name="viewport" content="width=device-width">
-
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<style>
-	body {
-	  padding-top: 60px;
-	  padding-bottom: 40px;
-	}
-	</style>
-	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-	<link rel="stylesheet" href="css/style.css">
-
-	<script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
-</head>
-<body>
-<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Anto Subash</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Hello, There!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-      </div>
-		
-			<footer>
-				<form class="post_message">
-					<input type="text" value="Message" onfocus="if(!this._haschanged){this.value=''};this._haschanged=true;">
-					<input type="submit" class="btn_post_message" value=""/>
-				</form>
-			</footer>
-      <hr>
-	 
-		<hr>
-      <footer>
-        <p>&copy; Antosubash 2012</p>
-      </footer>
-
-    </div> <!-- /container -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
-
-<script src="js/libs/bootstrap/bootstrap.min.js"></script>
-
-<script src="js/plugins.js"></script>
-<script src="js/script.js"></script>
-<script>
-	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-	s.parentNode.insertBefore(g,s)}(document,'script'));
-</script>
-<script type="text/javascript">
-	var hero = $(".hero-unit").html();
-	
-</script>
-</body>
 </html>
