--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<!-- Custom styles for this template -->
 		<link href="assets/css/main.css" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 		<script src="assets/js/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/js/smoothscroll.js"></script>
 		<script src="assets/js/Chart.js"></script>
@@ -300,15 +300,15 @@
 							<sm>SOCIAL LINKS</sm>
 						</p>
 						<p>
-							<a href="http://www.twitter.com/antosubash"><i class="icon-twitter"></i></a>
-							<a href="http://www.facebook.com/antosubash"><i class="icon-facebook"></i></a>
-							<a href="http://www.linkedin.com/in/antosubash"><i class="icon-linkedin"></i></a>
+							<a href="https://www.twitter.com/antosubash"><i class="icon-twitter"></i></a>
+							<a href="https://www.facebook.com/antosubash"><i class="icon-facebook"></i></a>
+							<a href="https://www.linkedin.com/in/antosubash"><i class="icon-linkedin"></i></a>
 						</p>
 					</div>
 					<div class="col-lg-3">
 						<p>
-							<a href="http://stackoverflow.com/users/1068147/anto-j-subash">
-<img src="http://stackoverflow.com/users/flair/1068147.png?theme=dark" width="208" height="58" alt="profile for Anto J Subash at Stack Overflow, Q&A for professional and enthusiast programmers" title="profile for Anto J Subash at Stack Overflow, Q&A for professional and enthusiast programmers">
+							<a href="https://stackoverflow.com/users/1068147/anto-j-subash">
+<img src="https://stackoverflow.com/users/flair/1068147.png?theme=dark" width="208" height="58" alt="profile for Anto J Subash at Stack Overflow, Q&A for professional and enthusiast programmers" title="profile for Anto J Subash at Stack Overflow, Q&A for professional and enthusiast programmers">
 </a>
 						</p>
 					</div>
